2001-09-14  Sam Steingold  <sds@gnu.org>

	* regexp.lisp (with-loop-split): :case-sensitive is a &key, not
	&optional, added :start and :end
	(regexp-exec): accept negative :end

2001-09-14  Sam Steingold  <sds@gnu.org>

	more work on the Pretty-Printer
	* constsym.d (*PRIN-INDENTATION*): new var
	* format.lisp (format-tabulate): use it instead of CURRENT-INDENT
	(current-indent): removed
	* io.d (cons_ssstring, pprint_prefix): new functions
	(right_margin): use pprint_prefix()
	(pphelp_newline): use PPHELP_NEW_STRING()
	(justify_empty_1): use cons_ssstring()
	(pr_enter_1): use pprint_prefix()
	(PPRINT-INDENT): add spaces when necessary
	(pprint_lisp): do level check
	* lispbibl.d (cons_ssstring, PUSH_CONS, PPHELP_PUSH,
	PPHELP_NEW_STRING): added (for io.d and stream.d)
	* pprint.lisp (pprint-logical-block): moved binding out of lambda;
	bind *PRIN-INDENTATION* instead of *PRIN-L1* and *PRIN-LM*
	* spvw.d (init_symbol_values): defvar *PRIN-LINE-PREFIX* (forgot
	on 2001-08-17) and *PRIN-INDENTATION*
	* stream.d (wr_ch_pphelp): when given NL, start a new string
	using PPHELP_NEW_STRING
	(make_pphelp_stream): use cons_ssstring()

2001-09-13  Sam Steingold  <sds@gnu.org>

	* regexp.lisp: replaced CASE-INSENSITIVE with CASE-SENSITIVE
	throughout (preserving the defaults)

2001-09-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (docdir): use `share' for all $fsstnd

2001-09-10  Sam Steingold  <sds@gnu.org>

	* debug.d (read_form): check the input_len before string_eqcomp_ci()

2001-09-10  Sam Steingold  <sds@gnu.org>

	* pprint.lisp (pprint-logical-block): unroll stream-symbol (NIL ->
	*STANDARD-OUTPUT*, T -> *TERMINAL-IO*)

2001-09-10  Sam Steingold  <sds@gnu.org>

	* io.d (pr_enter_1): a GC-safety issue

2001-09-10  Sam Steingold  <sds@gnu.org>

	* macros2.lisp (Exhaustive-Case-Analysis): added CASE-LIST flet
	(gensym-list): new function
	(time, space): use it
	* compiler.lisp (c-MAP-on-CARs, c-MAP-on-LISTs, c-MAPC, c-MAPL): ditto